<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Project:		Xecute
  ~
  ~ Package:		app
  ~
  ~ Author:		aaronburke
  ~
  ~ Date:		 	2 25, 2014
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#285dab"
            android:text="@string/task"/>

        <TextView
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="TESTING"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#285dab"
            android:text="@string/project_name_hint"/>

        <TextView
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#285dab"
            android:text="@string/task_due_date"/>

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="TESTING"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#285dab"
            android:text="@string/task_description"/>

        <ScrollView
            android:id="@+id/taskDescrScroll"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingBottom="25dp"
                android:layout_marginTop="8dp"
                android:text="TESTING"/>

        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:background="#e1e1e1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#285dab"
                android:textStyle="bold"
                android:text="PROGRESS"/>

            <ProgressBar
                android:id="@+id/taskProgressBar"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="16sp"
                    android:text="0%"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:textSize="16sp"
                    android:text="25%"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:textSize="16sp"
                    android:text="50%"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:textSize="16sp"
                    android:text="75%"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:textSize="16sp"
                    android:text="100%"/>

                </LinearLayout>
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="#285dab"
            android:text="@string/comments"/>

        <ListView
            android:id="@+id/commentList"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            </ListView>

    </LinearLayout>
</ScrollView>